Changed method of resetting sources.

--- a/attpcdaq/templates/daq/status.html
+++ b/attpcdaq/templates/daq/status.html
@@ -73,7 +73,7 @@
                                 title="Stop" data-toggle="tooltip" data-placement="bottom">
                             <span class="fa fa-stop"></span>
                         </button>
-                        <button class="btn btn-warning" data-daq-state-target="{{ aSource.IDLE }}" id="btn-reset-all"
+                        <button class="btn btn-warning" data-daq-state-target="{{ aSource.RESET }}" id="btn-reset-all"
                                 title="Reset" data-toggle="tooltip" data-placement="bottom">
                             <span class="fa fa-repeat"></span>
                         </button>
@@ -121,7 +121,7 @@
                                 title="Stop" data-toggle="tooltip" data-placement="bottom">
                             <span class="fa fa-stop"></span>
                         </button>
-                        <button class="btn btn-xs btn-warning" data-daq-source-id="{{ source.pk }}" data-daq-state-target="{{ source.IDLE }}"
+                        <button class="btn btn-xs btn-warning" data-daq-source-id="{{ source.pk }}" data-daq-state-target="{{ source.RESET }}"
                                 title="Reset" data-toggle="tooltip" data-placement="bottom">
                             <span class="fa fa-repeat"></span>
                         </button>
