--- a/attpcdaq/static/css/site.css
+++ b/attpcdaq/static/css/site.css
@@ -21,10 +21,11 @@ body {
   background-color: #fefefe;
 }
 .sidebar-app-name {
-  font-size: 150%;
-  height: 50px;
+  font-size: 160%;
+  height: 60px;
   color: white;
-  padding-top: 10px;
+  margin: -10px -20px 10px;
+  padding-top: 20px;
   text-align: center;
 }
 .login-app-name {
@@ -106,6 +107,46 @@ body {
   font-weight: 300;
   color: #555555;
   font-size: 120%;
+}
+.panel-status {
+  display: flex;
+  align-items: center;
+  height: 100px;
+  vertical-align: middle;
+}
+.panel-status .status-text {
+  font-size: 200%;
+  font-weight: 300;
+  color: white;
+  display: inline;
+  position: relative;
+}
+.panel-status .status-icon {
+  display: inline;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  font-size: 60px;
+  opacity: 0.3;
+  color: white;
+}
+.source-ctrl-btn:hover {
+  color: #808080;
+}
+.bg-color-idle {
+  background-color: #50514F;
+}
+.bg-color-ready {
+  background-color: #247BA0;
+}
+.bg-color-running {
+  background-color: #70C1B3;
+}
+.bg-color-error {
+  background-color: #F25F5C;
+}
+.bg-color-intermediate {
+  background-color: #6C8484;
 }
 .login-page {
   background-color: #222733;
