--- a/web/attpcdaq/static/css/site.less
+++ b/web/attpcdaq/static/css/site.less
@@ -147,7 +147,13 @@ body {
   }
 }
 
-.source-ctrl-btn:hover {
+.source-ctrl-btn,
+a > .source-ctrl-btn {
+  color: black;
+}
+
+.source-ctrl-btn:hover,
+a > .source-ctrl-btn:hover {
   color: hsl(0, 0, 0.5);
 }
 
