Added font import to site.less.
Fixes #9

--- a/web/attpcdaq/static/css/site.css
+++ b/web/attpcdaq/static/css/site.css
@@ -1,3 +1,4 @@
+@import 'https://fonts.googleapis.com/css?family=Lato:300,400,400i,700';
 body {
   padding-top: 10px;
   background-color: #eff0f4;
