Made RunMetadata.duration a timedelta object and added duration_string.

--- a/web/attpcdaq/templates/daq/status.html
+++ b/web/attpcdaq/templates/daq/status.html
@@ -25,7 +25,7 @@
                     </tr>
                     <tr>
                         <th>Current run duration:</th>
-                        <td id="run-duration">{{ latest_run.duration|default:'No runs' }}</td>
+                        <td id="run-duration">{{ latest_run.duration_string|default:'No runs' }}</td>
                     </tr>
                 </table>
             </div>
