Made docs link open in new tab.

--- a/web/attpcdaq/templates/base.html
+++ b/web/attpcdaq/templates/base.html
@@ -56,6 +56,9 @@
                                 <li><a href="{% url 'accounts/logout' %}">Log out</a></li>
                             </ul>
                         </li>
+                        <li>
+                            <a href="/doc" target="_blank"><span class="fa fa-question-circle"></span> Help</a>
+                        </li>
                     </ul>
                 </div>
 
