--- a/web/attpcdaq/templates/daq/data_source_list.html
+++ b/web/attpcdaq/templates/daq/data_source_list.html
@@ -19,7 +19,9 @@
                 <th>Name</th>
                 <th>ECC server address</th>
                 <th>ECC server port</th>
-                <th>Data router</th>
+                <th>Data router address</th>
+                <th>Data router port</th>
+                <th>Data router type</th>
                 <th></th>
             </tr>
             {% for source in datasource_list %}
@@ -27,7 +29,9 @@
                 <td>{{ source.name }}</td>
                 <td>{{ source.ecc_ip_address|default:'None' }}</td>
                 <td>{{ source.ecc_port|default:'None' }}</td>
-                <td>{{ source.data_router.name|default:'None' }}</td>
+                <td>{{ source.data_router_ip_address|default:'None' }}</td>
+                <td>{{ source.data_router_port|default:'None' }}</td>
+                <td>{{ source.data_router_type }}</td>
                 <td class="text-right">
                     <a role="button" class="btn btn-xs btn-default"
                        href="{% url 'daq/update_source' source.pk %}">
