--- a/web/attpcdaq/templates/daq/add_or_edit_item.html
+++ b/web/attpcdaq/templates/daq/add_or_edit_item.html
@@ -4,7 +4,12 @@
 {% block title %}Add / Update - AT-TPC DAQ{% endblock %}
 
 {% block body %}
-<div class="container">
-    {% crispy form %}
+<div class="panel panel-default">
+    <div class="panel-heading">
+        {{ panel_title|default:'Add or edit item' }}
+    </div>
+    <div class="panel-body">
+        {% crispy form %}
+    </div>
 </div>
 {% endblock %}
