Added basic run titles.

--- a/web/attpcdaq/static/css/site.css
+++ b/web/attpcdaq/static/css/site.css
@@ -131,12 +131,12 @@ body {
   opacity: 0.3;
   color: white;
 }
-.source-ctrl-btn,
-a > .source-ctrl-btn {
+.icon-btn,
+a > .icon-btn {
   color: black;
 }
-.source-ctrl-btn:hover,
-a > .source-ctrl-btn:hover {
+.icon-btn:hover,
+a > .icon-btn:hover {
   color: #808080;
 }
 .bg-color-idle {
