--- a/web/attpcdaq/static/css/site.less
+++ b/web/attpcdaq/static/css/site.less
@@ -148,13 +148,13 @@ body {
   }
 }
 
-.source-ctrl-btn,
-a > .source-ctrl-btn {
+.icon-btn,
+a > .icon-btn {
   color: black;
 }
 
-.source-ctrl-btn:hover,
-a > .source-ctrl-btn:hover {
+.icon-btn:hover,
+a > .icon-btn:hover {
   color: hsl(0, 0, 0.5);
 }
 
